--- a/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
@@ -9,12 +9,12 @@
         },
         "modelInfo": {
             "modelType": "vfModule",
-            "modelInvariantId": "{{ vf_module.metadata["vfModuleModelInvariantUUID"] }}",
-            "modelVersionId": "{{ vf_module.metadata["vfModuleModelUUID"] }}",
-            "modelName": "{{ vf_module.metadata["vfModuleModelName"] }}",
-            "modelVersion": "{{ vf_module.metadata["vfModuleModelVersion"] }}",
-            "modelCustomizationId": "{{ vf_module.metadata["vfModuleModelCustomizationUUID"] }}",
-            "modelCustomizationName": "{{ vf_module.metadata["vfModuleModelName"] }}"
+            "modelInvariantId": "{{ vf_module.model_invariant_uuid }}",
+            "modelVersionId": "{{ vf_module.model_version_id }}",
+            "modelName": "{{ vf_module.model_name }}",
+            "modelVersion": "{{ vf_module.model_version }}",
+            "modelCustomizationId": "{{ vf_module.model_customization_id }}",
+            "modelCustomizationName": "{{ vf_module.model_name }}"
         },
         "requestParameters": {
             "userParams": [
@@ -52,11 +52,11 @@
                     "instanceId": "{{ vnf_instance.vnf_id }}",
                     "modelInfo": {
                         "modelType": "vnf",
-                        "modelName": "{{ vnf_instance.vnf.metadata["name"] }}",
-                        "modelInvariantId": "{{ vnf_instance.vnf.metadata["invariantUUID"] }}",
-                        "modelVersion": "{{ vnf_instance.vnf.metadata["version"] }}",
-                        "modelVersionId": "{{ vnf_instance.vnf.metadata["UUID"] }}",
-                        "modelCustomizationId": "{{ vnf_instance.vnf.metadata["customizationUUID"] }}",
+                        "modelName": "{{ vnf_instance.vnf.model_name }}",
+                        "modelInvariantId": "{{ vnf_instance.vnf.model_invariant_id }}",
+                        "modelVersion": "{{ vnf_instance.vnf.model_version }}",
+                        "modelVersionId": "{{ vnf_instance.vnf.model_version_id }}",
+                        "modelCustomizationId": "{{ vnf_instance.vnf.model_customization_id }}",
                         "modelCustomizationName": "{{ vnf_instance.vnf.name }}"
                     }
                 }
