Use  correctvalue for NodeTemplate.model_customization_id

--- a/src/onapsdk/so/templates/instantiate_service_macro.json.j2
+++ b/src/onapsdk/so/templates/instantiate_service_macro.json.j2
@@ -82,7 +82,7 @@
                                     "modelInfo": {
                                         "modelName": "{{ vnf.model_name }}",
                                         "modelVersionId": "{{ vnf.model_version_id }}",
-                                        "modelInvariantUuid": "{{ vnf.model_invartiant_id }}",
+                                        "modelInvariantUuid": "{{ vnf.model_invariant_id }}",
                                         "modelVersion": "{{ vnf.model_version }}",
                                         "modelCustomizationId": "{{ vnf.model_customization_id }}",
                                         "modelInstanceName": "{{ vnf.model_name }}"
