Declare input for component's property

--- a/src/onapsdk/sdc/templates/component_declare_input.json.j2
+++ b/src/onapsdk/sdc/templates/component_declare_input.json.j2
@@ -5,7 +5,7 @@
       {
         "constraints": null,
         "defaultValue": null,
-        "description": "The depending service invariant uuid in order to map the allotted resource to the specific service version",
+        "description": "",
         "name": "{{ property.name }}",
         "origName": "{{ property.name }}",
         "parentUniqueId": null,
@@ -16,7 +16,7 @@
         },
         "schemaType": null,
         "type": "{{ property.property_type }}",
-        "uniqueId": "{{ component.actual_component_uid }}.{{ property.name }}",
+        "uniqueId": "{{ property.unique_id }}",
         "value": null,
         "definition": false,
         "getInputValues": null,
