Set default value for component input

--- a/src/onapsdk/sdc/templates/component_declare_input.json.j2
+++ b/src/onapsdk/sdc/templates/component_declare_input.json.j2
@@ -17,7 +17,11 @@
         "schemaType": null,
         "type": "{{ property.property_type }}",
         "uniqueId": "{{ property.unique_id }}",
-        "value": null,
+        {% if property.value is not none %}
+        "value":"{{ property.value }}",
+        {% else %}
+        "value":null,
+        {% endif %}
         "definition": false,
         "getInputValues": null,
         "parentPropertyType": null,
