VF without vsp creation

--- a/src/onapsdk/sdc/templates/vf_create.json.j2
+++ b/src/onapsdk/sdc/templates/vf_create.json.j2
@@ -22,6 +22,6 @@
     "resourceType": "VF",
     "tags": ["{{ name }}"],
     "toscaArtifacts": {},
-    "vendorName": "{{ vsp.vendor.name }}",
+    "vendorName": "{{ vendor.name }}",
     "vendorRelease": "1.0"
 }
