Added attributes to sdc service model.
Extended service template with service function, service role and
service type which may be required to automate SDC model creation in
E2E NS use case.

Signed-off-by: marcin <m@krasm.net>
Issue-ID: INT-2064

--- a/src/onapsdk/sdc/templates/service_create.json.j2
+++ b/src/onapsdk/sdc/templates/service_create.json.j2
@@ -22,5 +22,8 @@
   "instantiationType": "{{ instantiation_type }}",
   "environmentContext": "General_Revenue-Bearing",
   {% include "sdc_resource_category.json.j2" %},
-  "icon": "network_l_1-3"
+  "icon": "network_l_1-3",
+  "serviceFunction": "{{ function }}",
+  "serviceRole": "{{ role }}",
+  "serviceType": "{{ service_type }}"
 }
