Add missing A&AI complex fields: timezone, data owner, data source and data souce version

--- a/src/onapsdk/aai/templates/complex_create.json.j2
+++ b/src/onapsdk/aai/templates/complex_create.json.j2
@@ -15,5 +15,9 @@
     "latitude": "{{ complex.latitude }}",
     "longitude": "{{ complex.longitude }}",
     "elevation": "{{ complex.elevation }}",
-    "lata": "{{ complex.lata }}"
+    "lata": "{{ complex.lata }}",
+    "time-zone": "{{ complex.timezone }}",
+    "data-owner": "{{ complex.data_owner }}",
+    "data-source": "{{ complex.data_source }}",
+    "data-source-version": "{{ complex.data_source_version }}"
 }
